--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <li><a href="#metodo">O Método Apex</a></li>
                 <li><a href="#planos">Planos e Pacotes</a></li>
                 <li><a href="#sobre">Sobre Nós</a></li>
-                <li><a href="#orcamento" class="cta-button-nav">Orçamento Instantâneo</a></li>
+                <div id="auth-container"> </div>
             </ul>
         </nav>
     </header>
@@ -283,6 +283,8 @@
         <p>&copy; 2025 Apex Care. Todos os direitos reservados. Desenvolvido por @erick.fsm.</p>
     </div>
 </footer>
+    <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/shared.js"></script> 
     <script type="module" src="js/main.js"></script>
 </body>
 </html>
