--- a/login.html
+++ b/login.html
@@ -36,4 +36,6 @@
     </div>
     
     <script type="module" src="js/auth.js"></script> </body>
+    <script type="module" src="js/shared.js"></script> <script type="module" src="js/main.js"></script>
+</body>
 </html>
