--- a/orcamento.html
+++ b/orcamento.html
@@ -21,7 +21,7 @@
                 <li><a href="index.html#metodo">O Método Apex</a></li>
                 <li><a href="index.html#planos">Planos e Pacotes</a></li>
                 <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <li><a href="orcamento.html" class="cta-button-nav">Orçamento Instantâneo</a></li>
+                <div id="auth-container"> </div>
             </ul>
         </nav>
     </header>
@@ -92,5 +92,6 @@
     </div>
 </footer>
     <script type="module" src="js/orcamento.js"></script> 
+    <script type="module" src="js/shared.js"></script> <script type="module" src="js/main.js"></script>
 </body>
 </html>
