--- a/cadastro.html
+++ b/cadastro.html
@@ -49,5 +49,6 @@
     </div>
     
     <script type="module" src="js/auth.js"></script>
+    <script type="module" src="js/shared.js"></script> <script type="module" src="js/main.js"></script>
 </body>
 </html>
