--- a/portal-cliente.html
+++ b/portal-cliente.html
@@ -5,31 +5,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portal do Cliente - Apex Care</title>
     <link rel="stylesheet" href="css/style.css"> 
-    <link rel="stylesheet" href="css/orcamento.css"> <style> /* Estilos rápidos para esta página */
-        .portal-main { padding-top: 120px; padding-bottom: 80px; }
-        .welcome-message { margin-bottom: 40px; }
-        .appointments-section { margin-bottom: 50px; }
-        .appointment-card { background-color: #fff; padding: 20px; border-radius: 8px; box-shadow: 0 5px 15px rgba(0,0,0,0.05); margin-bottom: 15px; display: flex; justify-content: space-between; align-items: center; }
-        .appointment-card h4 { margin-bottom: 10px; }
-        .cancel-btn { background-color: #e74c3c; color: white; border: none; padding: 10px 15px; border-radius: 5px; cursor: pointer; }
-    </style>
-</head>
+    <link rel="stylesheet" href="css/portal.css"> </head>
 <body>
 
     <header class="main-header scrolled">
-        <nav class="main-nav">
-            <a href="#" class="logo">
-                <img src="assets/images/logo-apex-care.svg" alt="Logo Apex Care">
-            </a>
-            <ul>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#metodo">O Método Apex</a></li>
-                <li><a href="#planos">Planos e Pacotes</a></li>
-                <li><a href="#sobre">Sobre Nós</a></li>
-                <li><a href="#orcamento" class="cta-button-nav">Orçamento Instantâneo</a></li>
-            </ul>
-        </nav>
-    </header>
+        </header>
     
     <main class="portal-main">
         <div class="container">
@@ -40,53 +20,22 @@
 
             <div class="appointments-section">
                 <h2>Próximos Agendamentos</h2>
-                <div id="upcoming-appointments">
-                    <p>Carregando agendamentos...</p>
-                </div>
+                <div id="upcoming-appointments"><p>Carregando...</p></div>
             </div>
 
             <div class="appointments-section">
                 <h2>Histórico de Serviços</h2>
-                <div id="past-appointments">
-                    <p>Carregando histórico...</p>
-                </div>
+                <div id="past-appointments"><p>Carregando...</p></div>
             </div>
+
+            <button id="logout-btn" class="cta-button-outline">Sair da Conta (Logout)</button>
         </div>
     </main>
 
     <footer class="main-footer">
-       <footer class="main-footer">
-    <div class="container footer-grid">
-        
-        <div class="footer-col">
-            <img src="assets/images/logo-apex-care-white.svg" alt="Logo Apex Care" class="footer-logo">
-            <p>Performance que traz tranquilidade. Tratamento técnico para estofados em Ibirité e região.</p>
-        </div>
+       </footer>
 
-        <div class="footer-col">
-            <h4>Navegação</h4>
-            <ul>
-                <li><a href="#servicos">Serviços</a></li>
-                <li><a href="#metodo">O Método Apex</a></li>
-                <li><a href="#planos">Planos e Pacotes</a></li>
-                <li><a href="#sobre">Sobre Nós</a></li>
-            </ul>
-        </div>
-
-        <div class="footer-col">
-            <h4>Contato</h4>
-            <ul>
-                <li><a href="https://wa.me/55SEUDDDSEUNUMERO" target="_blank">WhatsApp</a></li>
-                <li><a href="mailto:contato@apexcare.com.br">contato@apexcare.com.br</a></li>
-                <li><a href="https://instagram.com/apex.higienizacao" target="_blank">Instagram</a></li>
-            </ul>
-        </div>
-
-    </div>
-    <div class="footer-bottom">
-        <p>&copy; 2025 Apex Care. Todos os direitos reservados. Desenvolvido por @erick.fsm.</p>
-    </div>
-</footer>
     <script type="module" src="js/portal.js"></script> 
+    <script type="module" src="js/shared.js"></script> <script type="module" src="js/main.js"></script>
 </body>
 </html>
