--- a/agendamento.html
+++ b/agendamento.html
@@ -11,6 +11,7 @@
     <link rel="stylesheet" href="css/style.css"> 
     <link rel="stylesheet" href="css/orcamento.css">
     <link rel="stylesheet" href="css/agendamento.css">
+    <link rel="stylesheet" href="css/style-improvements.css">
 </head>
 <body>
 
