--- a/orcamento.html
+++ b/orcamento.html
@@ -22,8 +22,8 @@
                 <li><a href="index.html#metodo">O Método Apex</a></li>
                 <li><a href="index.html#planos">Planos e Pacotes</a></li>
                 <li><a href="index.html#sobre">Sobre Nós</a></li>
-                <div id="auth-container"> </div>
             </ul>
+            <div id="auth-container" class="auth-container-header"></div>
         </nav>
     </header>
 
