--- a/orcamento.html
+++ b/orcamento.html
@@ -13,9 +13,10 @@
 </head>
 <body>
 
-    <header class="main-header scrolled"> 
+    <header class="main-header scrolled">
         <nav class="main-nav">
-            <a href="index.html" class="logo"> <img src="assets/images/logo-apex-care.svg" alt="Logo Apex Care">
+            <a href="index.html" class="logo">
+                <img src="assets/images/logo-apex-care.svg" alt="Logo Apex Care">
             </a>
             <ul>
                 <li><a href="index.html#servicos">Serviços</a></li>
@@ -29,32 +30,126 @@
 
     <main class="orcamento-main">
         <div class="container">
-            <div class="orcamento-wrapper">
-                
-                <div class="form-steps">
+            <div class="steps-wrapper">
+                <div class="steps-header">
                     <h1 class="section-title">Orçamento Instantâneo Apex Care</h1>
-                    <p class="section-subtitle">Siga os passos e monte seu tratamento personalizado em menos de 1 minuto.</p>
-
-                    <div class="step">
-                        <h2>Passo 1: Selecione os itens</h2>
-                        <div id="service-selection">
-                            <!-- Itens de serviço serão inseridos aqui via JavaScript -->
+                    <p class="section-subtitle">Preencha as etapas para receber um orçamento personalizado em minutos.</p>
+                    <div class="steps-progress" id="steps-progress">
+                        <div class="progress-step active" data-step="1">
+                            <span class="step-index">1</span>
+                            <span class="step-label">Cadastro rápido</span>
+                        </div>
+                        <div class="progress-step" data-step="2">
+                            <span class="step-index">2</span>
+                            <span class="step-label">Dados do imóvel</span>
+                        </div>
+                        <div class="progress-step" data-step="3">
+                            <span class="step-index">3</span>
+                            <span class="step-label">Serviços</span>
+                        </div>
+                        <div class="progress-step" data-step="4">
+                            <span class="step-index">4</span>
+                            <span class="step-label">Resumo e preço</span>
+                        </div>
+                        <div class="progress-bar">
+                            <div class="progress-bar-fill" id="progress-bar-fill"></div>
                         </div>
                     </div>
                 </div>
-                
-                <div class="summary">
-                    <h3>Resumo do Orçamento</h3>
-                    <div id="summary-items">
-                        <p>Nenhum item selecionado.</p>
-                    </div>
-                    <div class="summary-total">
-                        <span>Total Estimado:</span>
-                        <span id="total-price">R$ 0,00</span>
-                    </div>
-                    <button id="next-step-btn" class="cta-button-hero large" style="width: 100%;">Agendar Visita</button>
-                </div>
 
+                <section class="step-section active" data-step="1">
+                    <h2>Etapa 1 – Cadastro rápido</h2>
+                    <form id="step-1-form" class="step-form" novalidate>
+                        <div class="form-group">
+                            <label for="nome">Nome completo</label>
+                            <input type="text" id="nome" name="nome" placeholder="Informe seu nome" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="email">E-mail</label>
+                            <input type="email" id="email" name="email" placeholder="seuemail@exemplo.com" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="telefone">Telefone / WhatsApp</label>
+                            <input type="tel" id="telefone" name="telefone" placeholder="(00) 00000-0000" required>
+                        </div>
+                    </form>
+                    <div class="step-actions">
+                        <button class="cta-button-hero" data-action="next">Próximo</button>
+                    </div>
+                </section>
+
+                <section class="step-section" data-step="2">
+                    <h2>Etapa 2 – Dados do imóvel</h2>
+                    <form id="step-2-form" class="step-form" novalidate>
+                        <div class="form-group">
+                            <label for="tipo-imovel">Tipo de imóvel</label>
+                            <select id="tipo-imovel" name="tipo-imovel" required>
+                                <option value="">Selecione</option>
+                                <option value="residencial">Residencial</option>
+                                <option value="comercial">Comercial</option>
+                                <option value="condominio">Condomínio</option>
+                            </select>
+                        </div>
+                        <div class="form-group">
+                            <label for="metragem">Metragem aproximada (m²)</label>
+                            <input type="number" id="metragem" name="metragem" min="1" placeholder="Ex.: 120" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="cidade">Cidade / Bairro</label>
+                            <input type="text" id="cidade" name="cidade" placeholder="Informe a localização" required>
+                        </div>
+                    </form>
+                    <div class="step-actions">
+                        <button class="ghost-button" data-action="prev">Voltar</button>
+                        <button class="cta-button-hero" data-action="next">Próximo</button>
+                    </div>
+                </section>
+
+                <section class="step-section" data-step="3">
+                    <h2>Etapa 3 – Seleção de serviços</h2>
+                    <p class="step-description">Escolha os serviços desejados para seu imóvel. Você poderá revisar tudo na próxima etapa.</p>
+                    <div id="service-selection" class="service-grid">
+                        <!-- Itens de serviço serão inseridos aqui via JavaScript -->
+                    </div>
+                    <div class="step-actions">
+                        <button class="ghost-button" data-action="prev">Voltar</button>
+                        <button class="cta-button-hero" data-action="next">Próximo</button>
+                    </div>
+                </section>
+
+                <section class="step-section" data-step="4">
+                    <h2>Etapa 4 – Resumo e preço</h2>
+                    <div class="resume-grid">
+                        <div class="resume-card">
+                            <h3>Seus dados</h3>
+                            <ul class="resume-list">
+                                <li><span>Nome:</span> <span id="resume-nome">-</span></li>
+                                <li><span>E-mail:</span> <span id="resume-email">-</span></li>
+                                <li><span>Telefone:</span> <span id="resume-telefone">-</span></li>
+                            </ul>
+                            <h3>Dados do imóvel</h3>
+                            <ul class="resume-list">
+                                <li><span>Tipo:</span> <span id="resume-tipo-imovel">-</span></li>
+                                <li><span>Metragem:</span> <span id="resume-metragem">-</span></li>
+                                <li><span>Localização:</span> <span id="resume-cidade">-</span></li>
+                            </ul>
+                        </div>
+                        <div class="summary">
+                            <h3>Resumo do Orçamento</h3>
+                            <div id="summary-items">
+                                <p>Nenhum item selecionado.</p>
+                            </div>
+                            <div class="summary-total">
+                                <span>Total Estimado:</span>
+                                <span id="total-price">R$ 0,00</span>
+                            </div>
+                            <button id="next-step-btn" class="cta-button-hero large" style="width: 100%;">Agendar Visita</button>
+                        </div>
+                    </div>
+                    <div class="step-actions">
+                        <button class="ghost-button" data-action="prev">Voltar</button>
+                    </div>
+                </section>
             </div>
         </div>
     </main>
@@ -91,7 +186,8 @@
             <p>&copy; 2025 Apex Care. Todos os direitos reservados. Desenvolvido por @erick.fsm.</p>
         </div>
     </footer>
-    <script type="module" src="js/orcamento.js"></script> 
-    <script type="module" src="js/shared.js"></script> <script type="module" src="js/main.js"></script>
+    <script type="module" src="js/orcamento.js"></script>
+    <script type="module" src="js/shared.js"></script>
+    <script type="module" src="js/main.js"></script>
 </body>
 </html>
