--- a/orcamento.html
+++ b/orcamento.html
@@ -41,13 +41,50 @@
                             <!-- Itens de serviço serão inseridos aqui via JavaScript -->
                         </div>
                     </div>
+
+                    <div class="step">
+                        <h2>Passo 2: Informe o endereço da visita</h2>
+                        <div class="form-grid">
+                            <div class="form-group">
+                                <label for="cep-input">CEP</label>
+                                <input type="text" id="cep-input" placeholder="Digite o CEP" inputmode="numeric" maxlength="9">
+                                <small class="form-hint">Preencha o CEP e pressione TAB para buscar automaticamente.</small>
+                            </div>
+                            <div class="form-group">
+                                <label for="numero-input">Número</label>
+                                <input type="text" id="numero-input" placeholder="Número" inputmode="numeric">
+                            </div>
+                            <div class="form-group">
+                                <label for="complemento-input">Complemento</label>
+                                <input type="text" id="complemento-input" placeholder="Apartamento, bloco, ponto de referência...">
+                            </div>
+                            <div class="form-group">
+                                <label for="rua-input">Rua</label>
+                                <input type="text" id="rua-input" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="bairro-input">Bairro</label>
+                                <input type="text" id="bairro-input" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="cidade-input">Cidade</label>
+                                <input type="text" id="cidade-input" readonly>
+                            </div>
+                            <div class="form-group">
+                                <label for="estado-input">Estado</label>
+                                <input type="text" id="estado-input" readonly>
+                            </div>
+                        </div>
+                    </div>
                 </div>
-                
+
                 <div class="summary">
                     <h3>Resumo do Orçamento</h3>
                     <div id="summary-items">
                         <p>Nenhum item selecionado.</p>
                     </div>
+                    <div id="summary-charges" class="summary-charges"></div>
+                    <div id="distance-info" class="summary-distance"></div>
                     <div class="summary-total">
                         <span>Total Estimado:</span>
                         <span id="total-price">R$ 0,00</span>
