inicio de sistema de promoçoes e pacotes

--- a/orcamento.html
+++ b/orcamento.html
@@ -32,6 +32,7 @@
         <div class="container">
             <div class="steps-wrapper">
                 <div class="steps-header">
+                    <div id="promocoes-banner" style="margin: 20px 0;"></div>
                     <h1 class="section-title">Orçamento Instantâneo Apex Care</h1>
                     <p class="section-subtitle">Preencha as etapas para receber um orçamento personalizado em minutos.</p>
                     <div id="login-warning" class="login-warning hidden">
@@ -228,7 +229,7 @@
             <p>&copy; 2025 Apex Care. Todos os direitos reservados. Desenvolvido por @erick.fsm.</p>
         </div>
     </footer>
-
+    <script type="module" src="js/promocoes-manager.js"></script>
     <script type="module" src="js/orcamento.js"></script>
     <script type="module" src="js/shared.js"></script>
     <script type="module" src="js/main.js"></script>
