Refactor plan pricing to shared data-driven rendering

--- a/index.html
+++ b/index.html
@@ -129,51 +129,10 @@
                 <h2 class="section-title">Soluções Contínuas para seu Bem-Estar</h2>
                 <p class="section-subtitle">Escolha o plano de cuidado que melhor se adapta à sua rotina e economize.</p>
 
-                <div class="pricing-grid">
-                    
-                    <div class="pricing-card">
-                        <h3 class="plan-title">Trimestral</h3>
-                        <p class="plan-tagline">Manutenção Máxima</p>
-                        <div class="plan-price">R$ 119,90 <span class="price-period">/ trimestre</span></div>
-                        <ul class="plan-features">
-                            <li><span class="check-icon">✓</span><strong>4 Higienizações</strong> por ano</li>
-                            <li><span class="check-icon">✓</span> Ideal para pets e crianças</li>
-                            <li><span class="check-icon">✓</span> Maior desconto por serviço</li>
-                            <li><span class="check-icon">✓</span> 15% OFF serviços avulsos</li>
-                            <li><span class="check-icon">✓</span> 20% OFF taxas adicionais</li>
-                        </ul>
-                        <a href="#orcamento" class="cta-button-outline">Saber Mais</a>
-                    </div>
-
-                    <div class="pricing-card featured">
-                        <div class="featured-badge">MAIS POPULAR</div>
-                        <h3 class="plan-title">Semestral</h3>
-                        <p class="plan-tagline">Cuidado Proativo</p>
-                        <div class="plan-price">6x R$ 49,90 <span class="price-period">/ semestre</span></div>
-                        <ul class="plan-features">
-                            <li><span class="check-icon">✓</span><strong>2 Higienizações</strong> por ano</li>
-                            <li><span class="check-icon">✓</span> Equilíbrio perfeito custo-benefício</li>
-                            <li><span class="check-icon">✓</span> Mantém estofado sempre novo</li>
-                            <li><span class="check-icon">✓</span> 15% OFF serviços avulsos</li>
-                            <li><span class="check-icon">✓</span> 20% OFF taxas adicionais</li>
-                        </ul>
-                        <a href="#orcamento" class="cta-button-hero">Quero Este Plano</a>
-                    </div>
-
-                    <div class="pricing-card">
-                        <h3 class="plan-title">Anual</h3>
-                        <p class="plan-tagline">Tranquilidade Essencial</p>
-                        <div class="plan-price">12x R$ 14,90 <span class="price-period">/ ano</span></div>
-                        <ul class="plan-features">
-                            <li><span class="check-icon">✓</span><strong>1 Higienização</strong> por ano</li>
-                            <li><span class="check-icon">✓</span><strong>1 Suporte Emergencial</strong> para odores</li>
-                            <li><span class="check-icon">✓</span> Segurança contra imprevistos</li>
-                            <li><span class="check-icon">✓</span> 15% OFF serviços avulsos</li>
-                            <li><span class="check-icon">✓</span> 20% OFF taxas adicionais</li>
-                        </ul>
-                        <a href="#orcamento" class="cta-button-outline">Saber Mais</a>
-                    </div>
-
+                <div class="pricing-grid" data-pricing-grid>
+                    <noscript>
+                        <p style="text-align: center;">Ative o JavaScript para visualizar os valores atualizados dos planos.</p>
+                    </noscript>
                 </div>
             </div>
         </section>
