--- a/portal-cliente.html
+++ b/portal-cliente.html
@@ -184,60 +184,10 @@
                             <h2>Planos de Cuidado Contínuo - Economize até 25%</h2>
                         </div>
 
-                        <div class="plans-comparison">
-                            <div class="plan-card plan-trimestral">
-                                <div class="plan-badge">MAIS ECONOMIA</div>
-                                <h3>🔥 Plano Trimestral</h3>
-                                <div class="plan-price">
-                                    <span class="currency">R$</span>
-                                    <span class="value">119</span>
-                                    <span class="period">/trimestre</span>
-                                </div>
-                                <ul class="plan-benefits">
-                                    <li>✅ 4 Higienizações por ano</li>
-                                    <li>✅ 15% OFF em serviços avulsos</li>
-                                    <li>✅ 20% OFF em taxas adicionais</li>
-                                    <li>✅ Prioridade no agendamento</li>
-                                    <li>✅ 1 Emergência gratuita/ano</li>
-                                </ul>
-                                <div class="economy-badge">Economize até R$ 400/ano</div>
-                            </div>
-
-                            <div class="plan-card plan-semestral featured">
-                                <div class="plan-badge">MAIS POPULAR</div>
-                                <h3>⭐ Plano Semestral</h3>
-                                <div class="plan-price">
-                                    <span class="currency">6x R$</span>
-                                    <span class="value">49,90</span>
-                                    <span class="period">/semestre</span>
-                                </div>
-                                <ul class="plan-benefits">
-                                    <li>✅ 2 Higienizações por ano</li>
-                                    <li>✅ 15% OFF em serviços avulsos</li>
-                                    <li>✅ 20% OFF em taxas adicionais</li>
-                                    <li>✅ Manutenção preventiva</li>
-                                    <li>✅ Desconto em impermeabilização</li>
-                                </ul>
-                                <div class="economy-badge">Economize até R$ 250/ano</div>
-                            </div>
-
-                            <div class="plan-card plan-anual">
-                                <div class="plan-badge">TRANQUILIDADE</div>
-                                <h3>🛡️ Plano Anual</h3>
-                                <div class="plan-price">
-                                    <span class="currency">12x R$</span>
-                                    <span class="value">14,90</span>
-                                    <span class="period">/ano</span>
-                                </div>
-                                <ul class="plan-benefits">
-                                    <li>✅ 1 Higienização por ano</li>
-                                    <li>✅ 1 Suporte emergencial</li>
-                                    <li>✅ 15% OFF em serviços avulsos</li>
-                                    <li>✅ Segurança contra imprevistos</li>
-                                    <li>✅ Parcelamento facilitado</li>
-                                </ul>
-                                <div class="economy-badge">Economize até R$ 150/ano</div>
-                            </div>
+                        <div class="plans-comparison" data-portal-pricing>
+                            <noscript>
+                                <p style="text-align: center;">Ative o JavaScript para comparar os valores variáveis de cada plano.</p>
+                            </noscript>
                         </div>
 
                         <div class="plans-cta">
@@ -572,95 +522,6 @@
             color: #666;
             font-size: 0.95em;
             line-height: 1.5;
-        }
-
-        /* Plans Comparison */
-        .plans-comparison {
-            display: grid;
-            grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
-            gap: 20px;
-            margin: 30px 0;
-        }
-
-        .plan-card {
-            background-color: white;
-            padding: 30px;
-            border-radius: 10px;
-            box-shadow: 0 4px 15px rgba(0, 0, 0, 0.1);
-            position: relative;
-            border: 2px solid #e5e7eb;
-            transition: transform 0.3s, box-shadow 0.3s;
-        }
-
-        .plan-card:hover {
-            transform: translateY(-5px);
-            box-shadow: 0 8px 25px rgba(0, 0, 0, 0.15);
-        }
-
-        .plan-card.featured {
-            border-color: var(--color-cyan);
-            transform: scale(1.05);
-        }
-
-        .plan-badge {
-            position: absolute;
-            top: -12px;
-            left: 50%;
-            transform: translateX(-50%);
-            background-color: var(--color-cyan);
-            color: white;
-            padding: 5px 15px;
-            border-radius: 20px;
-            font-size: 0.75em;
-            font-weight: 700;
-        }
-
-        .plan-card h3 {
-            text-align: center;
-            font-size: 1.5em;
-            margin: 15px 0;
-        }
-
-        .plan-price {
-            text-align: center;
-            margin: 20px 0;
-        }
-
-        .plan-price .currency {
-            font-size: 1em;
-            vertical-align: top;
-        }
-
-        .plan-price .value {
-            font-size: 3em;
-            font-weight: 900;
-            color: var(--color-cyan);
-        }
-
-        .plan-price .period {
-            font-size: 0.9em;
-            color: #666;
-        }
-
-        .plan-benefits {
-            list-style: none;
-            padding: 0;
-            margin: 20px 0;
-        }
-
-        .plan-benefits li {
-            padding: 10px 0;
-            border-bottom: 1px dashed #e5e7eb;
-        }
-
-        .economy-badge {
-            background-color: #4caf50;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            border-radius: 5px;
-            font-weight: 700;
-            margin-top: 20px;
         }
 
         .plans-cta {
