--- a/orcamento.html
+++ b/orcamento.html
@@ -38,7 +38,8 @@
                     <div id="login-warning" class="login-warning hidden">
                         <strong>Atenção:</strong> faça login ou crie sua conta para continuar com o orçamento.
                     </div>
-                    <div class="steps-progress" id="steps-progress">
+                    <div id="step-indicator" class="step-indicator" aria-live="polite"></div>
+                    <div class="steps-progress visually-hidden" id="steps-progress" aria-hidden="true">
                         <div class="progress-step active" data-step="1">
                             <span class="step-index">1</span>
                             <span class="step-label">Cadastro rápido</span>
