Improve appointment cancellation feedback

--- a/portal-cliente.html
+++ b/portal-cliente.html
@@ -346,6 +346,12 @@
         </div>
     </footer>
 
+    <div id="portal-status-toast" class="portal-status-toast" role="status" aria-live="polite">
+        <span class="toast-icon" aria-hidden="true">ℹ️</span>
+        <span class="toast-message"></span>
+        <button type="button" class="toast-close" aria-label="Fechar notificação">&times;</button>
+    </div>
+
     <script type="module" src="js/shared-improved.js"></script>
     <script type="module" src="js/portal-improved.js"></script>
     <script type="module" src="js/main.js"></script>
