feat: reveal budget totals earlier with status indicator

--- a/orcamento.html
+++ b/orcamento.html
@@ -253,8 +253,12 @@
                             <p>Nenhum item selecionado.</p>
                         </div>
                         <div id="summary-charges" class="summary-charges"></div>
-                        <div id="distance-info" class="summary-distance">Informe CEP e número para calcular a distância (até 20 km sem taxa adicional).</div>
-                        <div id="summary-total-locked" class="summary-total-locked">Confirme o resumo para visualizar o valor final.</div>
+                        <div
+                            id="distance-info"
+                            class="summary-distance"
+                            aria-live="polite"
+                        >Informe CEP e número para calcular a distância (até 20 km sem taxa adicional).</div>
+                        <div id="summary-total-locked" class="summary-total-locked">Informe CEP, número e selecione os serviços para liberar o valor estimado.</div>
                         <div class="summary-total">
                             <span>Total Estimado:</span>
                             <span id="total-price">R$ 0,00</span>
