--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -375,6 +375,16 @@
                     <div class="stat-label">Receita Total</div>
                 </div>
                 <div class="stat-card">
+                    <div class="stat-icon">🎯</div>
+                    <div class="stat-value" id="promocoes-convertidas">0</div>
+                    <div class="stat-label">Promoções Convertidas</div>
+                </div>
+                <div class="stat-card">
+                    <div class="stat-icon">🏷️</div>
+                    <div class="stat-value" id="descontos-concedidos">R$ 0</div>
+                    <div class="stat-label">Descontos Concedidos</div>
+                </div>
+                <div class="stat-card">
                     <div class="stat-icon">👥</div>
                     <div class="stat-value" id="total-clientes">0</div>
                     <div class="stat-label">Total de Clientes</div>
@@ -523,6 +533,8 @@
 
     <script type="module">
         import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
+        import './js/promocoes-manager.js';
+        import { registrarUsoPromocaoSeAplicavel } from './js/promocoes-helpers.js';
 
         const SUPABASE_URL = 'https://xrajjehettusnbvjielf.supabase.co';
         const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhyYWpqZWhldHR1c25idmppZWxmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5NjE2NzMsImV4cCI6MjA3NTUzNzY3M30.LIl1PcGEA31y2TVYmA7zH7mnCPjot-s02LcQmu79e_U';
@@ -534,6 +546,8 @@
         let allClients = [];
         let selectedAppointmentId = null;
         let managedUser = null;
+        let promotionUsage = [];
+        let promocoesManager = null;
 
         const ROLE_LABELS = {
             cliente: 'Cliente',
@@ -628,6 +642,9 @@
             }
 
             currentUser = user;
+            if (window?.PromocoesManager) {
+                promocoesManager = new window.PromocoesManager();
+            }
             await loadAllData();
         }
 
@@ -635,7 +652,8 @@
             await Promise.all([
                 loadAppointments(),
                 loadTechnicians(),
-                loadClients()
+                loadClients(),
+                loadPromotionUsage()
             ]);
             updateStats();
         }
@@ -696,6 +714,20 @@
             renderClientsTable();
         }
 
+        async function loadPromotionUsage() {
+            const { data, error } = await supabase
+                .from('promocoes_uso')
+                .select('*');
+
+            if (error) {
+                console.error('Erro ao carregar uso de promoções:', error);
+                promotionUsage = [];
+                return;
+            }
+
+            promotionUsage = data || [];
+        }
+
         function updateStats() {
             // Total de agendamentos
             document.getElementById('total-agendamentos').textContent = allAppointments.length;
@@ -723,6 +755,26 @@
 
             // Técnicos ativos
             document.getElementById('total-tecnicos').textContent = allTechnicians.length;
+
+            const totalPromocoes = promotionUsage.length;
+            const totalDescontos = promotionUsage.reduce((sum, uso) => {
+                return sum + (Number(uso?.valor_desconto) || 0);
+            }, 0);
+
+            const promocoesConvertidasEl = document.getElementById('promocoes-convertidas');
+            if (promocoesConvertidasEl) {
+                promocoesConvertidasEl.textContent = totalPromocoes;
+            }
+
+            const descontosConcedidosEl = document.getElementById('descontos-concedidos');
+            if (descontosConcedidosEl) {
+                descontosConcedidosEl.textContent = formatCurrency(totalDescontos);
+            }
+        }
+
+        function shouldRegistrarPromocao(status) {
+            const candidatos = ['Aprovado', 'Aguardando Agendamento', 'Pago e Confirmado'];
+            return candidatos.includes(status);
         }
 
         function renderAppointmentsTable() {
@@ -1024,6 +1076,8 @@
 
         window.updateBudgetStatus = async function(appointmentId, newStatus) {
             try {
+                const appointment = allAppointments.find(appt => appt.id === appointmentId);
+
                 const payload = {
                     status_pagamento: newStatus
                 };
@@ -1039,6 +1093,22 @@
                     .eq('id', appointmentId);
 
                 if (error) throw error;
+
+                if (appointment && shouldRegistrarPromocao(newStatus)) {
+                    try {
+                        if (!promocoesManager && window?.PromocoesManager) {
+                            promocoesManager = new window.PromocoesManager();
+                        }
+
+                        if (promocoesManager) {
+                            await registrarUsoPromocaoSeAplicavel(promocoesManager, appointment, {
+                                clienteId: appointment.cliente_id,
+                            });
+                        }
+                    } catch (registroError) {
+                        console.error('Erro ao registrar uso da promoção após atualização:', registroError);
+                    }
+                }
 
                 alert('Status do orçamento atualizado com sucesso!');
                 await loadAllData();
