refactor: centralize supabase client configuration

--- a/pagamento-sucesso.html
+++ b/pagamento-sucesso.html
@@ -255,11 +255,7 @@
     </div>
 
     <script type="module">
-        import { createClient } from 'https://cdn.jsdelivr.net/npm/@supabase/supabase-js/+esm';
-
-        const SUPABASE_URL = 'https://xrajjehettusnbvjielf.supabase.co';
-        const SUPABASE_ANON_KEY = 'eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJpc3MiOiJzdXBhYmFzZSIsInJlZiI6InhyYWpqZWhldHR1c25idmppZWxmIiwicm9sZSI6ImFub24iLCJpYXQiOjE3NTk5NjE2NzMsImV4cCI6MjA3NTUzNzY3M30.LIl1PcGEA31y2TVYmA7zH7mnCPjot-s02LcQmu79e_U';
-        const supabase = createClient(SUPABASE_URL, SUPABASE_ANON_KEY);
+        import { supabase } from './js/supabase-client.js';
 
         async function loadPaymentDetails() {
             try {
