--- a/admin-dashboard.html
+++ b/admin-dashboard.html
@@ -150,21 +150,10 @@
             margin-right: 5px;
         }
 
-        .status-badge {
-            display: inline-flex;
-            align-items: center;
+        .dashboard-table .status-badge {
+            min-width: 130px;
             justify-content: center;
-            padding: 6px 14px;
-            border-radius: 999px;
-            font-weight: 600;
-            font-size: 0.85em;
         }
-
-        .status-pendente { background-color: #fff4e5; color: #f57c00; }
-        .status-confirmado { background-color: #e8f5e9; color: #2e7d32; }
-        .status-em-andamento { background-color: #e0f7fa; color: #00838f; }
-        .status-concluido { background-color: #dcedc8; color: #558b2f; }
-        .status-cancelado { background-color: #ffebee; color: #c62828; }
 
         .btn-assign {
             background-color: var(--color-cyan);
